# SAMPHP

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  build.sh
build-vs2008/samphp/: samphp.def  samphp.vcproj  samphp.vcxproj
server-folder/php/core/: bootstrap.php  callbacks.php  callbacks.txt  player.php  playercamera.php  server.php
src/: CMakeLists.txt  bindings.cpp  bindings_callbacks.hpp  bindings_samphp.hpp
